--- a/package.json
+++ b/package.json
@@ -3,5 +3,22 @@
   "version": "0.0.1",
   "repository": "git@bitbucket.org:oskarstrasburger/wp-starter-theme.git",
   "author": "Oskar Strasburger <oskar.strasburger@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "webpack --progress --hide-modules --config app/build/webpack.config.js"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "postcss-loader": "^2.0.8",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1"
+  }
 }
